--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <h1>포크를 해주세요~</h1>
     <ul>
-        <li>진유림</li>
-        <li>장기효</li>
+        <li>진유림3</li>
+        <li>장기효2</li>
     </ul>
 </body>
 </html>
